--- a/index.html
+++ b/index.html
@@ -266,8 +266,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading"> Timeline </h2>
+                    <h3 class="section-subheading text-muted"> Every project has challenges, and every project has its rewards....</h3>
                 </div>
             </div>
             <div class="row">
