--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
                 
-                <a class="navbar-brand page-scroll animated infinite bounce" href="#page-top">Coding VALLEY</a>
+                <a class="navbar-brand page-scroll animated " href="#page-top">Coding VALLEY</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
